# text_file_to_json_and_fill_template

./: Dockerfile  README.md  TFTJ  TFTJW.py  app.py  config.py  convert_raw_dict_to_typed_dict.py  files_to_json.py  get_json.py  models.py  online_editor.py  parse_textfile_to_raw_dict.py  pyproject.toml  requirements.txt  schemas.py  script_config.py  utils.py
docker_image_inside_mount/: file.json
docker_image_inside_mount/Script/: Example PRO ENG.docx
docker_image_inside_mount/from_docker_slim_python*/: full.json
docker_image_inside_mount/Тест/: 1019663.58f3aa8b98884.txt  127597.5437e22a4c573.txt  137476.5475d022a06e7.txt  3018711.5f55a9353ff67.txt  3032998.5f62d595e546c.txt  60077.529ba0b80db52.txt
from_docke/: full.json
from_docker_slim_python*/Publication for Web/: 1008890.58ed2ded15028.json  1015628.58f0bae4d9472.json  1015749.58f0cb02e9875.json  1018558.58f28563d374c.json  1048093.59038025cb8e7.json  1048737.5904166943fcb.json  1054962.59085da0cf152.json  1064399.590dcf5cb6b07.json  1073193.5912f2fbb1490.json  1087429.591b5ffe44753.json  1089643.591c98b8630b8.json  1091069.591d695d176cd.json  1091487.591d8d7f3c3f7.json  1091643.591d95e98853a.json  1124467.59307ebbc2aa9.json  1126838.59325ff4ee8d4.json  1131147.593546ad1c11d.json  1144149.593d29001423a.json  1146983.593ec643cf1a2.json  1158767.59468da36880a.json  117457.53f323cb40fc3.json  117469.53f3328dcf7aa.json  1175313.5950f151beaa3.json  119972.5405fe0cde236.json  1201649.5962a64c79486.json  1204269.596475564e48b.json  (+628 more)
from_docker_slim_python_012/: full.json
output/: full.json
(+1877 files in other folders)
