[tool.poetry]
name = "pdf-image-to-string-and-fill-template"
version = "0.1.0"
description = ""
authors = ["Suren <parsyansuren@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.5.2"
flaskcode = "^0.0.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
